issue #2273 - MilestoneTypeFinalDesigns milestone: everything takes the whole width on mobile screens when milestone is inReview or isCompleted

--- a/src/projects/detail/components/timeline/milestones/MilestoneTypeFinalDesigns/MilestoneTypeFinalDesigns.scss
+++ b/src/projects/detail/components/timeline/milestones/MilestoneTypeFinalDesigns/MilestoneTypeFinalDesigns.scss
@@ -110,7 +110,6 @@
     display: flex;
     flex-wrap: wrap;
     padding-top: $base-unit;
-    padding-bottom: $base-unit;
     position: relative;
 
     button {
